--- a/partials/cart.html
+++ b/partials/cart.html
@@ -1,8 +1,7 @@
-<p ng-show="cart.length === 0">You have no products in your shopping cart</p>
-<ul class="listgroup" ng-repeat="product in cart track by $index">
+<p ng-show="cart.items.length === 0">You have no products in your shopping cart</p>
+<ul class="listgroup" ng-repeat="product in cart.items track by $index">
   <li>
   <h3>{{product.name}}</h3>
-  {{console.log(product)}}
   <p>category: {{product.category}}</p>
   <p>price: {{product.price | currency : "£"}}</p>
   <p>{{product.stock}} in stock</p>
@@ -13,6 +12,6 @@
 <h3>Total: {{cart.totalValue() | currency : "£"}}</h3>
 
 <form ng-submit="applyVoucher(voucher)">
-  <input type="text" name="voucher-code" id="voucher-code" value="" />
+  <input type="text" name="voucher-code" id="voucher-code" ng-model="voucher"/>
   <p><input type="submit" value="Submit"></p>
 </form>
